<resources>
    <string name="app_name">RealEstateAgencyS</string>
    <string name="facebook_app_id">553171795227678</string>
    <string name="fb_login_protocol_scheme">fb553171795227678</string>
    <string name="title_activity_navigation_bar">navigationBar</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change password</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="save">Save</string>
    <string name="house_name_hint">House Name</string>
    <string name="house_number_hint">House Number</string>

    <string-array name="choiceType">
        <item>Продава</item>
        <item>Дава под наем</item>

    </string-array>

    <string-array name="choicePlace">
        <item>София</item>
        <item>Пловдив</item>
        <item>Варна</item>
        <item>Бургас</item>
        <item>Велико Търново</item>
        <item>Стара Загора</item>


    </string-array>

    <string-array name="choicePlaceType">
        <item>Едностаен</item>
        <item>Двустаен</item>
        <item>Тристаен</item>
        <item>Многостаен</item>
        <item>Къща</item>
        <item>Офис</item>
        <item>Мезонет</item>
        <item>Ателие,Таван,Студио</item>


    </string-array>
    <string name="title_activity_list">list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name_of_house">Name of house</string>
    <string name="todo">TODO</string>
    <string name="_100">$100</string>

</resources>
