<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="0dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageKushta"
            android:scaleType="centerCrop"
            android:src="@drawable/kushta"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_margin="10dp"
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/foodNameItem"
                android:text="@string/name_of_house"
                android:textSize="20sp"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/shareFB"
                android:src="@drawable/kushta"
                android:tint="@color/colorAccent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/fav"
                android:src="@drawable/kushta"
                android:tint="@color/colorAccent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="TODO" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/foodPriceItem"
                android:layout_margin="10dp"
                android:text="@string/_100"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/quickCart"
                android:src="@drawable/kushta"
                android:tint="@color/colorAccent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="TODO" />

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>